<resources>
    <string name="app_name">Movies</string>
    <string name="tab_text_1">Populares</string>
    <string name="tab_text_2">Mejor valoradas</string>
    <string name="settings_menu_text_1">Ajustes</string>
    <string name="settings_menu_text_2">Log out</string>
    <string name="signed_in">Sesión iniciada</string>
    <string name="signed_out">Cerrando sesión</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Firebase User: %s</string>
    <string name="title_activity_email_password">EmailPasswordActivity</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password"></string>
    <string name="action_sign_in">Inicia sesión o registrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario invalido</string>
    <string name="invalid_password">La contraseña es demasiado corta</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Log in</string>
    <string name="register">Crear ususario</string>
    <string name="like">👍</string>
    <string name="dislike">👎</string>
    <string name="submit">Publicar</string>
    <string name="add_a_comment">Añade un comentario...</string>
    <string name="comments">Comentarios</string>
    <string name="contrasena">Contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="add_favorites">Añadir a favoritos</string>
    <string name="save">Guardar</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="new_username">Nuevo nombre de usuario</string>
</resources>